<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/conteiner"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.screens.activity_main.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        android:elevation="@dimen/elevation"
        android:background="@drawable/background_with_corner_radius_light">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_round"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="120dp"
            app:cardElevation="@dimen/elevation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <developer.mihailzharkovskiy.stepcounter.ui.custom_view.TickerAndProgressView
                android:id="@+id/ticker_and_progrss"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/background_with_corner_radius_light" />

        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/textView2"
            style="@style/text_header_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/meters"
            app:drawableStartCompat="@drawable/ic_step_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_round" />

        <com.robinhood.ticker.TickerView
            android:id="@+id/tv_tiker_meters"
            style="@style/text_header_big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="16dp"
            android:text="0"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2">

        </com.robinhood.ticker.TickerView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_begin="197dp"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView4"
            style="@style/text_header_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/kkal"
            app:drawableStartCompat="@drawable/ic_kkal"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <com.robinhood.ticker.TickerView
            android:id="@+id/tv_tiker_kalorii"
            style="@style/text_header_big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="8dp"
            android:text="0"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/textView4" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_statistika_shagov"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="-4dp"
        android:layout_weight="1"
        android:layoutAnimation="@anim/anim_layout_adapter"
        tools:listitem="@layout/adapter_steps">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/tv_no_statistics_data"
        style="@style/text_header_small"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/am_no_data"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_no_user_data"
        style="@style/text_header_small"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/am_no_user_data"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:orientation="horizontal"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="@dimen/elevation"
        android:background="@drawable/background_with_corner_radius_light">

        <ImageView
            android:id="@+id/bt_delete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="7dp"
            app:srcCompat="@drawable/ic_delete_light" />

        <View
            android:id="@+id/divider12"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="?android:attr/listDivider" />

        <ImageView
            android:id="@+id/bt_statistics"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="7dp"
            app:srcCompat="@drawable/ic_statistcs_light" />

        <View
            android:id="@+id/divider13"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="?android:attr/listDivider" />

        <ImageView
            android:id="@+id/bt_setting"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="4dp"
            app:srcCompat="@drawable/ic_settings_light" />

        <View
            android:id="@+id/divider14"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="?android:attr/listDivider" />

        <ImageView
            android:id="@+id/bt_save"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="7dp"
            app:srcCompat="@drawable/ic_save_light" />
    </LinearLayout>

</LinearLayout>

